--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<header>Header Section</header> <h1>Git Practice</h1> <footer>&copy; 2024 Git Practice</footer>
+<header>Header Section</header> <h1>Git Practice</h1>
